--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -14,12 +14,18 @@ layout: default
         • <span itemprop="author" itemscope itemtype="http://schema.org/Person"><span itemprop="name">{{ page.author }}</span></span>
       {% endif %}</p>
   </header>
+  
+  <!-- include share.html -->
 
+  
   <div class="post-content" itemprop="articleBody">
     {{ content }}
   </div>
-
+  
   {% if site.disqus.shortname %}
     {% include disqus_comments.html %}
   {% endif %}
+  
+  {% include widgetpack.html %}
+
 </article>
