Begin Stack article, enable share buttons

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -15,7 +15,7 @@ layout: default
       {% endif %}</p>
   </header>
   
-  <!-- include share.html -->
+  {% include share.html %}
 
   
   <div class="post-content" itemprop="articleBody">
