--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,7 +4,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <title>{% if page.title %}{{ page.title | escape }}{% else %}{{ site.title | escape }}{% endif %}</title>
-  <meta name="description" content="{{ page.excerpt | default: site.description | strip_html | normalize_whitespace | truncate: 160 | escape }}">
+  <meta name="description" content="{{ page.content | default: site.description | strip_html | normalize_whitespace | truncate: 160 | escape }}">
+  
+  {% if page.keywords %}
+    <meta name="keywords" content="{{ page.keywords }}, {{ site.keywords}}" />
+  {% else %}
+    <meta name="keywords" content="{{ site.keywords }}" />
+  {% endif %}
 
   <link rel="stylesheet" href="{{ "/assets/main.css" | relative_url }}">
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | absolute_url }}">
