--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,17 +5,17 @@
 
   <title>{% if page.title %}{{ page.title | escape }}{% else %}{{ site.title | escape }}{% endif %}</title>
   <meta name="description" content="{{ page.content | default: site.description | strip_html | normalize_whitespace | truncate: 160 | escape }}">
-  
+
   {% if page.keywords %}
     <meta name="keywords" content="{{ page.keywords }}, {{ site.keywords}}" />
   {% else %}
     <meta name="keywords" content="{{ site.keywords }}" />
   {% endif %}
 
-  <link rel="stylesheet" href="{{ "/assets/main.css" | relative_url }}">
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | absolute_url }}">
   <link rel="alternate" type="application/rss+xml" title="{{ site.title | escape }}" href="{{ "/feed.xml" | relative_url }}">
-  
+  <link rel="stylesheet" href="{{ "/assets/css/main.css" | relative_url }}">
+
   {% if jekyll.environment == 'production' %}
     {% include analytics.html %}
   {% endif %}
