--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,8 +3,8 @@
   <div class="wrapper">
     {% assign default_paths = site.pages | map: "path" %}
     {% assign page_paths = site.header_pages | default: default_paths %}
-    <a class="site-title" href="{{ "/" | relative_url }}">{{ site.title | escape }}</a>
-  
+    <a class="site-title" href="{{ "/" | relative_url }}"><img src="{{ site.baseurl }}/assets/img/logo.png"></img>{{ site.title | escape }}</a>
+
     {% if page_paths %}
       <nav class="site-nav">
         <label for="nav-trigger">
