--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -14,6 +14,19 @@ layout: default
         {% assign author = site.data.authors[page.author] %}
         • Written by <span itemprop="author" itemscope itemtype="http://schema.org/Person"><span itemprop="name">{{ author.name }}</span></span>
       {% endif %}</p>
+
+      <div class="post-categories">
+      {% if post %}
+      {% assign categories = post.categories %}
+      {% else %}
+      {% assign categories = page.categories %}
+      {% endif %}
+      Categories:
+      {% for category in categories %}
+      <a href="{{site.baseurl}}/categories/#{{category|slugize}}">{{category}}</a>
+      {% unless forloop.last %}&nbsp;{% endunless %}
+      {% endfor %}
+      </div>
   </header>
 
   {% include share.html %}
