Add email signup form

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -4,8 +4,14 @@ layout: default
 
 <div class="home">
 
+  <div id="signup">
+    <h2>
+      Thank you for signing up!
+    </h2>
+  </div>
+
   <h1 class="page-heading">Posts</h1>
-  
+
   {{ content }}
 
   <ul class="post-list">
