--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -34,6 +34,10 @@ layout: default
 
   <div class="post-content" itemprop="articleBody">
     {{ content }}
+
+    <hr>
+
+    {% include signup.html %}
   </div>
 
   {% if site.disqus.shortname %}
