Change old PageKey references to Line by Line Code
RIP PageKey Solutions!

--- a/_includes/signup.html
+++ b/_includes/signup.html
@@ -2,7 +2,7 @@
   <h1>Enjoyed the read?</h1>
   <p>Sign up for our mailing list to get notified about new posts and exclusive information!</p>
   <form class="signup" action="https://getsimpleform.com/messages?form_api_token=4451d61674dfdbfadb4c08152a6b4d7e" method="post">
-    <input type='hidden' name='redirect_to' value='http://blog.pagekeysolutions.com/?signup=true' />
+    <input type='hidden' name='redirect_to' value='http://linebylinecode.com/?signup=true' />
     <input placeholder="Email" type='email' name='email' />
     <input type='submit' value='Sign Up' />
   </form>
