--- a/_includes/tail.html
+++ b/_includes/tail.html
@@ -1,4 +1,4 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-<script>window.jQuery || document.write('<script src="{{ site.baseurl }}/assets/js/vendor/jquery-3.2.1.min.js"><\/script>')</script>
-<script src="{{ site.baseurl }}/assets/js/vendor/rrssb.min.js"></script>
-<script src="{{ site.baseurl }}/assets/js/site.js"></script>
+<script>window.jQuery || document.write('<script src="{{ site.baseurl }}assets/js/vendor/jquery-3.2.1.min.js"><\/script>')</script>
+<script src="{{ site.baseurl }}assets/js/vendor/rrssb.min.js"></script>
+<script src="{{ site.baseurl }}assets/js/site.js"></script>
