Fix wrong base url

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,7 +3,7 @@
   <div class="wrapper">
     {% assign default_paths = site.pages | map: "path" %}
     {% assign page_paths = site.header_pages | default: default_paths %}
-    <a class="site-title" href="{{ "/" | relative_url }}"><img alt="Line by Line Code" src="{{ site.baseurl }}assets/img/logo.png"></img></a>
+    <a class="site-title" href="{{ "/" | relative_url }}"><img alt="Line by Line Code" src="{{ site.baseurl }}/assets/img/logo.png"></img></a>
 
     {% if page_paths %}
       <nav class="site-nav">
