--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -23,7 +23,7 @@ layout: default
       {% endif %}
       Categories:
       {% for category in categories %}
-      <a href="{{site.baseurl}}categories/#{{category|slugize}}">{{category}}</a>
+      <a href="{{site.baseurl}}/categories/#{{category|slugize}}">{{category}}</a>
       {% unless forloop.last %}&nbsp;{% endunless %}
       {% endfor %}
       </div>
