--- a/_includes/header.html
+++ b/_includes/header.html
@@ -30,4 +30,4 @@
   </div>
 </header>
 
-<h1>This blog has moved to <a href="https://linebylinecode.com/">linebylinecode.com</a>
+<h1 style="text-align: center;">This blog has moved to <a href="https://linebylinecode.com/">linebylinecode.com</a></h1>
