--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -2,5 +2,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    {{ $css := "css/bootstrap.min.css" | relURL }}
+    <link rel="stylesheet" href="{{ $css }}">
     <title>{{ .Site.Title }}</title>
 </head>
