Add logo and header

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -4,8 +4,10 @@
 <body>
     {{ partial "nav.html" . }}
 
-    {{ block "main" . }}
-    {{ end }}
+    <main class="container">
+        {{ block "main" . }}
+        {{ end }}
+    </main>
 
     {{ partial "footer.html" }}
 </body>
