--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -2,7 +2,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>{{ .Site.Title }}</title>
+
     {{ $css := "css/bootstrap.min.css" | relURL }}
     <link rel="stylesheet" href="{{ $css }}">
-    <title>{{ .Site.Title }}</title>
+    {{ $templateStyle := resources.Get "css/template-style.css" }}
+    {{ $style := $templateStyle | resources.ExecuteAsTemplate "css/style.css" . }}
+    <link rel="stylesheet" type="text/css" href="{{ $style.Permalink }}">
 </head>
