--- a/layouts/index.html
+++ b/layouts/index.html
@@ -12,13 +12,16 @@
             <a href="/blog/">Blog</a>
             <br>
             {{ len (where .Site.RegularPages "Section" "=" "blog") }} posts 
+            <a href="#" class="btn btn-primary">Go</a>
         </div>
         <div id="col-2">
             <h2>Apps</h2>
             <a href="https://boomlanguages.com/">Boom! Languages</a>
+            <a href="#" class="btn btn-primary">Go</a>
         </div>
         <div id="col-3">
             <h2>Courses</h2>
+            <a href="#" class="btn btn-primary">Go</a>
         </div>
     </div>
     {{ partial "footer.html" . }}
