--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -4,8 +4,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{{ .Site.Title }}</title>
 
-    {{ $css := "css/bootstrap.min.css" | relURL }}
-    <link rel="stylesheet" href="{{ $css }}">
+    <link rel="stylesheet" href="{{ "css/bootstrap.min.css" | relURL }}">
+    {{ if eq .RelPermalink "/" }}
+    <link rel="stylesheet" href="{{ "css/carousel.css" | relURL }}">
+    {{ end }}
+
     {{ $templateStyle := resources.Get "css/template-style.css" }}
     {{ $style := $templateStyle | resources.ExecuteAsTemplate "css/style.css" . }}
     <link rel="stylesheet" type="text/css" href="{{ $style.Permalink }}">
