--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="{{ "css/bootstrap.min.css" | relURL }}">
     {{ if eq .RelPermalink "/" }}
     <link rel="stylesheet" href="{{ "css/carousel.css" | relURL }}">
+    <link rel="stylesheet" href="{{ "css/pattern.min.css" | relURL }}">
     {{ end }}
 
     {{ $templateStyle := resources.Get "css/template-style.css" }}
