--- a/layouts/index.html
+++ b/layouts/index.html
@@ -13,29 +13,35 @@
             </ol>
             <div class="carousel-inner">
             <div class="carousel-item active">
-                <img class="first-slide" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="First slide">
+                <div class="slide-bg w-25pc h-1by1 pattern-diagonal-stripes-md slategray-darker">hi</div>
                 <div class="container">
                 <div class="carousel-caption text-left">
+                    <img class="slide-icon" src="{{ "img/icons/entypo-pencil.svg" | relURL }}" alt="#">
+
                     <h1>Spicy Blog</h1>
                     <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
                     <p><a class="btn btn-lg btn-primary" href="#" role="button">Give it a read</a></p>
                 </div>
                 </div>
             </div>
-            <div class="carousel-item">
-                <img class="second-slide" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Second slide">
+            <div class="carousel-item" id="carousel-2">
+                <div class="slide-bg w-25pc h-1by1 pattern-horizontal-stripes-md slategray-darker">hi</div>
                 <div class="container">
                 <div class="carousel-caption">
+                    <img class="slide-icon" src="{{ "img/icons/entypo-monitor.svg" | relURL }}" alt="#">
+
                     <h1>Nifty Apps</h1>
                     <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
                     <p><a class="btn btn-lg btn-primary" href="#" role="button">Learn more</a></p>
                 </div>
                 </div>
             </div>
-            <div class="carousel-item">
-                <img class="third-slide" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Third slide">
+            <div class="carousel-item" id="carousel-3">
+                <div class="slide-bg w-25pc h-1by1 pattern-vertical-stripes-md slategray-darker">hi</div>
                 <div class="container">
                 <div class="carousel-caption text-right">
+                    <img class="slide-icon" src="{{ "img/icons/entypo-book.svg" | relURL }}" alt="#">
+
                     <h1>Courses</h1>
                     <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
                     <p><a class="btn btn-lg btn-primary" href="#" role="button">Browse courses</a></p>
@@ -59,9 +65,9 @@
             <div class="col-md-12">
                 <nav class="social-nav">
                     <ul>
-                        <li><a href="#"><img src="{{ "img/icons/youtube.svg" | relURL }}" alt="YouTube" /></a></li>
-                        <li><a href="#"><img src="{{ "img/icons/instagram.svg" | relURL }}" alt="Instagram" /></a></li>
-                        <li><a href="#"><img src="{{ "img/icons/email.svg" | relURL }}" alt="Email" /></a></li>
+                        <li><a target="_blank" href="https://youtube.com/c/PageKeySolutions"><img src="{{ "img/icons/youtube.svg" | relURL }}" alt="YouTube" /></a></li>
+                        <li><a target="_blank" href="https://instagram.com/pagekeysolutions"><img src="{{ "img/icons/instagram.svg" | relURL }}" alt="Instagram" /></a></li>
+                        <li><a target="_blank" href="mailto:info@pagekeysolutions.com"><img src="{{ "img/icons/email.svg" | relURL }}" alt="Email" /></a></li>
                     </ul>
                 </nav>
             </div>
@@ -77,7 +83,9 @@
             <!-- Three columns of text below the carousel -->
             <div class="row">
             <div class="col-lg-4">
-                <img class="rounded-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140">
+                <div class="rounded-circle">
+                    <img src="{{ "img/icons/entypo-pencil.svg" | relURL }}" alt="Generic placeholder image">
+                </div>
                 <h2>Blog</h2>
                 <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.</p>
                 <p>
@@ -86,13 +94,17 @@
                 <p><a class="btn btn-secondary" href="#" role="button">Visit &raquo;</a></p>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4">
-                <img class="rounded-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140">
+                <div class="rounded-circle">
+                    <img src="{{ "img/icons/entypo-monitor.svg" | relURL }}" alt="Generic placeholder image">
+                </div>
                 <h2>Apps</h2>
                 <p>Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Cras mattis consectetur purus sit amet fermentum. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
                 <p><a class="btn btn-secondary" href="#" role="button">Download &raquo;</a></p>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4">
-                <img class="rounded-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140">
+                <div class="rounded-circle">
+                    <img src="{{ "img/icons/entypo-book.svg" | relURL }}" alt="Generic placeholder image">
+                </div>
                 <h2>Courses</h2>
                 <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
                 <p><a class="btn btn-secondary" href="#" role="button">Learn &raquo;</a></p>
