--- a/static/css/carousel.css
+++ b/static/css/carousel.css
@@ -27,12 +27,12 @@ body {
     height: 32rem;
     background-color: #777;
   }
-  .carousel-item > img {
+  .carousel-item > .slide-bg {
     position: absolute;
     top: 0;
     left: 0;
     min-width: 100%;
-    height: 32rem;
+    height: 100%;
   }
   
   
