Add placeholders for apps, courses

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -20,7 +20,7 @@
 
                     <h1>Spicy Blog</h1>
                     <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-                    <p><a class="btn btn-lg btn-primary" href="#" role="button">Give it a read</a></p>
+                    <p><a class="btn btn-lg btn-primary" href="/blog/" role="button">Give it a read</a></p>
                 </div>
                 </div>
             </div>
@@ -32,7 +32,7 @@
 
                     <h1>Nifty Apps</h1>
                     <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-                    <p><a class="btn btn-lg btn-primary" href="#" role="button">Learn more</a></p>
+                    <p><a class="btn btn-lg btn-primary" href="/apps/" role="button">Learn more</a></p>
                 </div>
                 </div>
             </div>
@@ -44,7 +44,7 @@
 
                     <h1>Courses</h1>
                     <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-                    <p><a class="btn btn-lg btn-primary" href="#" role="button">Browse courses</a></p>
+                    <p><a class="btn btn-lg btn-primary" href="/courses/" role="button">Browse courses</a></p>
                 </div>
                 </div>
             </div>
@@ -91,7 +91,7 @@
                 <p>
                     {{ len (where .Site.RegularPages "Section" "=" "blog") }} posts so far
                 </p>
-                <p><a class="btn btn-secondary" href="#" role="button">Visit &raquo;</a></p>
+                <p><a class="btn btn-secondary" href="/blog/" role="button">Visit &raquo;</a></p>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4">
                 <div class="rounded-circle">
@@ -99,7 +99,7 @@
                 </div>
                 <h2>Apps</h2>
                 <p>Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Cras mattis consectetur purus sit amet fermentum. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
-                <p><a class="btn btn-secondary" href="#" role="button">Download &raquo;</a></p>
+                <p><a class="btn btn-secondary" href="/apps/" role="button">Download &raquo;</a></p>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4">
                 <div class="rounded-circle">
@@ -107,7 +107,7 @@
                 </div>
                 <h2>Courses</h2>
                 <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-                <p><a class="btn btn-secondary" href="#" role="button">Learn &raquo;</a></p>
+                <p><a class="btn btn-secondary" href="/courses/" role="button">Learn &raquo;</a></p>
             </div><!-- /.col-lg-4 -->
             </div><!-- /.row -->
 
