--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -1,6 +1,10 @@
 {{ define "main" }}
 
 <h1>{{ .Title }}</h1>
+<p>
+  {{ .Content }}
+</p>
+
 {{ range .Pages.ByPublishDate.Reverse }}
 <p>
   <a href="{{ .RelPermalink }}">{{ .Title }}</a>
