Consolidate landing page style with list view

--- a/assets/css/template-style.css
+++ b/assets/css/template-style.css
@@ -1,99 +1,7 @@
-html, body {
-    height: 100%;
-    padding: 0;
-}
-/** landing page **/
-#landing-page {
-    overflow-x: hidden;
-}
-#landing-page #site-title {
-    background-color: white;
-    text-align: center;
-    padding: 15px;
-    height: 7em;
-}
-#landing-page .slide-icon {
-    width: 8em;
-    margin-bottom: 1em;
-}
-#landing-page .slide-bg {
-    opacity: 0.35;
-    height: 100%;
-}
-#landing-page .carousel-item {
-    background-color: #777;
-}
-#landing-page .rounded-circle {
-    background-color:#777;
-    width: 140px;
-    height: 140px;
-    margin: auto;
-    margin-bottom: 1.5em;
-    display: flex;
-    justify-content: center;
-}
-#landing-page .rounded-circle > img {
-    width: 50%;
-    display: block;
-    margin: auto;
-}  
-#landing-page .my-feature-image {
-    width: 100%;
-}
-#landing-page .my-feature-image img {
-    width: 75%;
-    height: inherit;
-}
-
-.social-nav ul {
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    padding-left: 0;
-}
-.social-nav ul li {
-    display: block;
-    /* padding: 1.5em; */
-    margin: 4rem 1rem;
-    margin-top: 0;
-    width: 3rem;
-    height: 3rem;
-}
-.social-nav ul li a {
-    width: inherit;
-    height: inherit;
-    display: block;
-}
-.social-nav ul li a img {
-    width: inherit;
-    height: inherit;
-}
-
-
-
 /** blog **/
-#header-wrapper {
-    background-color: lightgray;
-    padding: 20px 0;
+#logo {
+    height: 3.5em;
 }
-header {
-    margin: 0 auto;
-    width: 80%;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    height: 100px;
-}
-header div#site-title {
-    height: inherit;
-}
-#site-title img {
-    height: 100%;
-}
-header nav a {
-    padding: 1.5em;
-    font-size: 1.1rem;
-}
-header nav a.active {
-    text-decoration: underline;
+nav a.active {
+    font-weight: bold;
 }
