--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,10 +1,7 @@
 {{ define "body" }}
 
     <main role="main" id="landing-page">
-        <div id="site-title">
-            {{ $logo_src := "img/logo.png" | relURL }}
-            <img src="{{ $logo_src }}" alt="{{ .Site.Title }}">
-        </div>
+        {{ partial "nav.html" . }}
         <div id="myCarousel" class="carousel slide" data-ride="carousel">
             <ol class="carousel-indicators">
             <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
@@ -173,10 +170,7 @@
 
 
         <!-- FOOTER -->
-        <footer class="container">
-            <p class="float-right"><a href="#">Back to top</a></p>
-            <p>Copyright &copy; {{ dateFormat "2006" now }} PageKey Solutions, LLC
-        </footer>
+        {{ partial "footer.html" . }}
     </main>
     
 {{ end }}
