--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,3 +1,4 @@
-<footer>
-    Copyright &copy; {{ dateFormat "2006" now }} PageKey Solutions, LLC
+<footer class="container">
+    <p class="float-right"><a href="#">Back to top</a></p>
+    <p>Copyright &copy; {{ dateFormat "2006" now }} PageKey Solutions, LLC
 </footer>
