--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,6 +1,6 @@
 {{ define "main" }}
 
-{{ if ne .Params.ShowTitle false }}
+{{ if ne .Params.Show_Title false }}
 <h1 class="single-title">{{ .Title }}</h1>
 {{ end }}
 
