Add featured image for blog articles

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -5,6 +5,9 @@
     {{ block "body" . }}
         {{ partial "nav.html" . }}
 
+        {{ block "pre-main" . }}
+        {{ end }}
+
         <main class="container">
             {{ block "main" . }}
             {{ end }}
