--- a/assets/css/template-style.css
+++ b/assets/css/template-style.css
@@ -1,3 +1,9 @@
+#nav-header {
+    margin-bottom: 0 !important;
+}
+main.container {
+    margin-top: 1rem;
+}
 /** blog **/
 #logo {
     height: 3.5em;
@@ -32,4 +38,35 @@ footer {
 .list-content img {
     max-width: 75%;
     margin: auto;
+}
+
+.article-hero {
+    display: grid;
+    align-items: center;
+    max-height: 80vh;
+    overflow-y: hidden;
+}
+.article-hero .featured-image {
+    grid-column: 1;
+    grid-row: 1;
+    position: relative;
+    top: 0;
+    left: 0;
+    z-index: -1;
+    width: 100%;
+}
+.article-hero .featured-image img {
+    width: 100%;
+}
+.article-hero h1 {
+    grid-column: 1;
+    grid-row: 1;
+    color: white;
+    text-align: center;
+    font-weight: bold;
+    text-shadow:
+        -1px -1px 0 #000,  
+        1px -1px 0 #000,
+        -1px 1px 0 #000,
+        1px 1px 0 #000;
 }
