--- a/layouts/404.html
+++ b/layouts/404.html
@@ -1,3 +1,20 @@
-
+{{ define "main" }}
 <h1>Page Not Found</h1>
-<a href="/" class="button">Return Home</a>
+<br>
+<a href="/" class="btn btn-primary">Return Home</a>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+{{ end }}
