--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -2,7 +2,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{{ .Site.Title }}</title>
+    <title>{{ if and (.Title) (ne .RelPermalink "/") }}{{ .Title }} | {{ end }}{{ .Site.Title }}</title>
 
     <link rel="stylesheet" href="{{ "css/bootstrap.min.css" | relURL }}">
     {{ if eq .RelPermalink "/" }}
