--- a/assets/css/template-style.css
+++ b/assets/css/template-style.css
@@ -54,6 +54,7 @@ footer {
     left: 0;
     z-index: -1;
     width: 100%;
+    max-height: 80vh;
 }
 .article-hero .featured-image img {
     width: 100%;
