--- a/assets/css/template-style.css
+++ b/assets/css/template-style.css
@@ -21,6 +21,7 @@ figure.app-logo img {
 }
 
 h1.single-title {
+    text-align: center;
     margin-bottom: 0.5em;
 }
 footer {
@@ -58,6 +59,7 @@ footer {
 }
 .article-hero .featured-image img {
     width: 100%;
+    margin-top: -20%;
 }
 .article-hero h1 {
     grid-column: 1;
@@ -83,4 +85,9 @@ figure figcaption {
 figure img {
     display: block;
     margin: auto;
+    max-width: 100%;
+}
+
+.highlight pre {
+    padding: 1em;
 }
