--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -25,6 +25,8 @@
         {{ end }}
     </div>
 
-    {{ .Content }}
+    <div class="article-content">
+        {{ .Content }}
+    </div>
 
 {{ end }}
