Add last article and latex support

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -13,8 +13,8 @@
             {{ end }}
         </main>
 
-        {{ partial "footer.html" }}
+        {{ partial "footer.html" . }}
     {{ end }}
-    {{ partial "script.html" }}
+    {{ partial "script.html" . }}
 </body>
 </html>
