--- a/layouts/partials/script.html
+++ b/layouts/partials/script.html
@@ -1,3 +1,6 @@
 <script src="{{ "js/jquery.min.js" | relURL }}"></script>
 <script src="{{ "js/popper.min.js" | relURL }}"></script>
 <script src="{{ "js/bootstrap.min.js" | relURL }}"></script>
+{{ if .Params.latex }}
+{{ partial "mathjax.html" . }}
+{{ end }}
